<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/spaceLeft"
        android:paddingRight="@dimen/spaceLeft"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createUser"
            android:textSize="@dimen/title"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editTextSize"
                    android:hint="@string/user"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutUser">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editTextSize"
                    android:hint="@string/date"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/descripcion"
                    android:gravity="start"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/maSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:text="@string/send"
            android:theme="@style/Button"
            android:background="@drawable/design_button"
            />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

