<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacionDatos">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/tvCdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cdTitle"
            android:textSize="@dimen/title"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tvCdName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widgetHeight"
            android:text="Nombre"
            android:layout_marginTop="24dp"
            android:layout_below="@id/tvCdTitle"
            android:gravity="center_vertical"
            android:textSize="16sp"/>
        <LinearLayout
            android:id="@+id/cdLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCdName"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/date"
                android:layout_weight=".25"
                android:gravity="center_vertical"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvCdDate"
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/date"
                android:layout_weight=".75"
                android:gravity="center_vertical"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cdLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cdLayoutDate"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/phone"
                android:layout_weight=".25"
                android:gravity="center_vertical"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvCdPhone"
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/cdTitle"
                android:layout_weight=".75"
                android:gravity="center_vertical"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cdLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cdLayoutPhone"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/email"
                android:layout_weight=".25"
                android:gravity="center_vertical"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvCdEmail"
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/cdTitle"
                android:layout_weight=".75"
                android:gravity="center_vertical"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cdLayoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/cdLayoutEmail"
            android:layout_marginTop="8dp"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/descripcion"
                android:layout_weight=".25"
                android:gravity="center_vertical"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvCdDescription"
                android:layout_width="0dp"
                android:layout_height="@dimen/widgetHeight"
                android:text="@string/cdTitle"
                android:layout_weight=".75"
                android:textSize="16sp"
                />
        </LinearLayout>
    <Button
        android:id="@+id/cdSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cdSend"
        android:layout_below="@id/cdLayoutDescription"
        android:theme="@style/Button"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/design_button"
        android:layout_marginTop="8dp"
        />

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>